--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,28 @@ body {
   color: #3f4850;
 }
 
+.load-Design {
+  font-size: 2rem;
+  font-weight: bold;
+  text-align: center;
+  margin-top: 50px;
+  color: #666;
+  animation: pulse 1s infinite;
+}
+
+@keyframes pulse {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+
 h2 {
   font-size: 2em;
   margin: 52px 0 40px;
@@ -92,7 +114,7 @@ input {
 }
 
 .photo-container ul {
-  display: flex;
+  /*display: flex;*/
   flex-flow: row wrap;
   justify-content: space-between;
   -ms-align-items: flex-start;
