--- a/src/index.css
+++ b/src/index.css
@@ -109,9 +109,9 @@ input {
   margin: auto;
 }
 
-.photo-wrap img {
+/*.photo-wrap img {
   min-width: 40%;
-}
+}*/
 
 .photo-container ul {
   display: flex;
@@ -130,8 +130,8 @@ input {
 
 .photo-container ul img {
   width: 100%;
-transform: scale(1.25);  
-transition: transform 1.25s;
+  transform: scale(1.25);
+  transition: transform 1.25s;
 }
 
 .photo-container li:hover img {
@@ -147,7 +147,7 @@ transition: transform 1.25s;
     padding-top: 2em;
   }
 
-  .photo-container li {
+  .photo-container ul {
     margin: auto;
   }
 }
